fixed media query for dark mode
fixed the default system mode loading!

--- a/index-styles.css
+++ b/index-styles.css
@@ -26,10 +26,8 @@
   }
             
   @media (prefers-color-scheme: dark) {
-        .dark-mode{
-            background-color: #383742;
-            color: white;}	
-        
+        background-color: #383742;
+            color: white;	
     }
 
   @media (prefers-color-scheme: light) {
@@ -38,7 +36,10 @@
           color: black;
         }
   }
-        
+    
+.dark-mode{
+            background-color: #383742;
+            color: white;}
         
   .my-btn-left {
         
